--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,14 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>RELEASE</version>
-        </dependency><dependency>
+            <version>2.24.5</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>RELEASE</version>
+            <version>4.13-beta-2</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
