--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
+							<classpathPrefix>lib/</classpathPrefix>
                             <mainClass>sample.Main</mainClass>
                         </manifest>
                     </archive>
@@ -31,6 +32,34 @@
                     <target>8</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.1</version>
+                <executions>
+                    <execution>
+                        <id>copy</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>com.sun.mail</groupId>
+                                    <artifactId>javax.mail</artifactId>
+                                    <type>jar</type>
+                                    <destFileName>javax.mail-1.6.0.jar</destFileName>
+                                    <overWrite>false</overWrite>
+                                </artifactItem>
+                            </artifactItems>
+                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                            <overWriteReleases>false</overWriteReleases>
+                            <overWriteSnapshots>true</overWriteSnapshots>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>			
         </plugins>
     </build>
     <dependencies>
